<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points: </string>
    <string name="secs">Seconds: </string>
    <string name="move_right">Move Right</string>
    <string name="move_left">Move Left</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="conpau">C/P</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
</resources>
